i have fixed some of js problems that we had in temrs of adding spacing in the text filed preview and edited

--- a/style.css
+++ b/style.css
@@ -3,59 +3,6 @@
  */
 
 
- /* *{
-     margin: 0;
- }
-
- body{
-     width: 100%;
-     height: 100%;
- }
-
-
- .container{
-     display: flex;
-   
-     width: 80%;
-     margin: 0 auto;
-     justify-content: space-between;
- }
-
- p{
-     text-align: center;
- }
-
- .madLibsEdit{
-     width: 35%;
-     height: 300px;
-     border: 1px solid black;
-     text-align: center;
-
-
- }
-
- .madLibsPreview{
-     width: 35%;
-     height: 300px;
-     border: 1px solid black;
-     text-align: center;
-    
-    
-
- }
- #previewP {
-     padding: 5px;
-     
-
- }
-
- #in {
-     border: black solid 1px 
- } */
-/* 
- input {
-     width: 20%;
-     /* border-radius: 5%; */
 
 span {
   color :  rgb(214, 62, 151);
@@ -89,4 +36,5 @@ p{
 }
 input{
     line-height:2px !important;
+    text-align: center ;
 }
